--- a/notebook/01  Slow Programming & Close Reading.ipynb
+++ b/notebook/01  Slow Programming & Close Reading.ipynb
@@ -450,6 +450,15 @@
     "\n",
     "</small>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
