--- a/notebook/04  Towards the OO Text.ipynb
+++ b/notebook/04  Towards the OO Text.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "## Chapter 4 — How does on OO model a text?\n",
+    "## Chapter 4 — How does one OO model a text?\n",
     "\n",
     "Quite frankly only now comes the hard part. We have a base text, but now what. What does it mean to slow program it, to close read it through code, or to read it as code? I am not sure at all. I think I'll just take a deep breath and dive in…\n",
     "\n",
