--- a/notebook/04  Towards the OO Text.ipynb
+++ b/notebook/04  Towards the OO Text.ipynb
@@ -23,6 +23,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "At this point my plan looks like this:\n",
+    "\n",
+    " 1. Read in the text.\n",
+    " 2. Create a super class 'Word' that instantiates and links the individual words.\n",
+    " 3. Make it possible for any word to have a meaning and a denotation (reference).\n",
+    " 4. For the latter we need classes and objects for the denotation, e.g. to be a person with the name 'Willem'.\n",
+    " 5. Then we can adorn this person with all kinds of annotations taken from the above.\n",
+    "\n",
+    "There are number of things nagging me. One is: do I keep structure information? At least I hold on to line endings, although I am not even sure why. The only reason I can come up with now is for sheer representational purposes, that is: visualizing the text in its bookish form. But of course this is an experiment to try to get away from the book metaphor. I can forget about this for now however, I can always take in more structural information later on if I need it.\n",
+    "\n",
+    "The other thing bothering me most is the reproducibility of the act of getting the annotative information. Ideally the application takes that information right from the source. So in this case probably from the commentary in the editions of Lulofs (<a href=\"#bibref_001\" name=\"backref_bibref_001\" id=\"backref_bibref_001\">1983</a>) and Bouwman & Besamuca (<a href=\"#bibref_002\" name=\"backref_bibref_002\" id=\"backref_bibref_002\">2009</a>). The latter at least is available and downloaded, the former has been scanned by Google, but seems to be not openly available. I guess I'll scan the pages I need as a form of citation. Then I will have to extract the parts pertaining to Willem. That in itself has its conundrums on how one would do that in any sustainable fashion. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### References\n",
     "<small>\n",
     "\n",
