Added three new chapters, oo models, annotation generator

--- a/notebook/01  Slow Programming & Close Reading.ipynb
+++ b/notebook/01  Slow Programming & Close Reading.ipynb
@@ -67,7 +67,7 @@
     "#    Copyright: Copyright (C) 1999-2016 ImageMagick Studio LLC\n",
     "#    License: http://www.imagemagick.org/script/license.php\n",
     "#    Features: Cipher DPC Modules \n",
-    "#    Delegates (built-in): bzlib freetype jng jpeg ltdl lzma png tiff xml zlibyou are good to go. \n",
+    "#    Delegates (built-in): bzlib freetype jng jpeg ltdl lzma png tiff xml zlib \n",
     "# You are good to go\n",
     "# If not see http://www.imagemagick.org/script/binary-releases.php for installation instructions.\n",
     "\n",
